--- a/login/6/kurtovic_benjamin_ye_tyrone/templates/login.html
+++ b/login/6/kurtovic_benjamin_ye_tyrone/templates/login.html
@@ -6,7 +6,17 @@
         <h1>Login required</h1>
         <p>Don't have an account? <a href="/register">Register</a>.</p>
         {% if error %}
-            <p>Error: {{error}}</p>
+            <p>Error:
+            {% if error == "missing" %}
+                Missing a username or password.
+            {% elif error == "no-user" %}
+                Username does not exist. <a href="/register">Register?</a>
+            {% elif error == "incorrect" %}
+                Incorrect password.
+            {% else %}
+                {{error}}
+            {% endif %}
+            </p>
         {% endif %}
         <form method="POST">
             <table>
