--- a/login/6/kurtovic_benjamin_ye_tyrone/templates/register.html
+++ b/login/6/kurtovic_benjamin_ye_tyrone/templates/register.html
@@ -5,7 +5,15 @@
     <body>
         <h1>Register</h1>
         {% if error %}
-            <p>Error: {{error}}</p>
+            <p>Error:
+            {% if error == "missing" %}
+                Missing a username or password.
+            {% elif error == "exists" %}
+                Username already exists. <a href="/login">Login?</a>
+            {% else %}
+                {{error}}
+            {% endif %}
+            </p>
         {% endif %}
         <form method="POST">
             <table>
