--- a/login/6/kurtovic_benjamin_ye_tyrone/templates/index.html
+++ b/login/6/kurtovic_benjamin_ye_tyrone/templates/index.html
@@ -1,5 +1,9 @@
-<h1>Index<h1>
-<a href = "/">Start</a>
-<a href = "/home">Home</a>
-<a href = "/login">Login</a>
-<a href = "/logout">Logout</a>
+<html>
+    <head>
+        <title>Home</title>
+    </head>
+    <body>
+        <h1>Welcome, {{username}}!</h1>
+        <p><a href="/logout">Logout</a></p>
+    </body>
+</html>
