--- a/login/6/kozak_severyn_yuen_jared/templates/index.html
+++ b/login/6/kozak_severyn_yuen_jared/templates/index.html
@@ -1,4 +1,17 @@
 <!DOCTYPE html>
 <html>
 
+	<head>
+		<title>
+			Register
+		</title>
+	</head>
+
+	<body>
+		<a href="/" >Home</a><br>
+		<a href="/register" >Register</a><br>
+		<a href="/login" >Login</a><br>
+		<a href="/vault" >Vault</a><br>
+	</body>
+
 </html>
