--- a/login/6/kozak_severyn_yuen_jared/templates/login.html
+++ b/login/6/kozak_severyn_yuen_jared/templates/login.html
@@ -1,4 +1,16 @@
 <!DOCTYPE html>
 <html>
 
+	<head>
+		<title>
+			Login
+		</title>
+	</head>
+
+	<body>
+		<form>
+			Username: <input type="text" name="Username"><br>
+			Password: <input type="password" name="Password"><br>
+			<input type="submit" name="Submit">
+	</body>
 </html>
