--- a/login/6/Cahn_David_Lu_Jasper/templates/login.html
+++ b/login/6/Cahn_David_Lu_Jasper/templates/login.html
@@ -1,9 +1,10 @@
-<h1> This is the register page </h1>
+<h1> This is the login page </h1>
 <hr>
 <form method = "POST">
     Username: <input type = 'text' name = 'username'/>
     <p>
     Password: <input type = 'password' name = 'password'/>
     <hr>
-    <input type = 'submit' name = 'button' value = 'Submit'/>
+    <input type = 'submit' name = 'button' value = 'Login'/>
+    <input type = 'submit' name = 'button' value = 'Register'/>
 </form>
