--- a/login/7/duda_rosenberg/templates/login.html
+++ b/login/7/duda_rosenberg/templates/login.html
@@ -7,15 +7,22 @@
 <body>
 <h1> Login </h1>
 
-<form method = "POST"> </form>
+<form method = "POST"> 
 
-<p>Username: </p><input type="text" name="username"> </input>
+Username: <input type="text" name="usrnm">
 <br>
-<p>Password: </p><input type="text" name="password"> </input>
+Password: &nbsp<input type="password" name="psswrd">
+<br>
+<input type="submit" value="Submit">
+<br>
 
+</form>
+<br>
 
+<p>{{error}}</p>
 
-<a href="/register"> Register here </a>
+<!-- <a href="/register"> Register here </a> -->
+
 </body>
 
 </html>
