--- a/login/7/field-thompson_will_luo_haoxin/templates/register.html
+++ b/login/7/field-thompson_will_luo_haoxin/templates/register.html
@@ -1,16 +1,16 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
 <html> <head>
-<title>Login</title>
+<title>Register</title>
 </head>
 
 <body>
-<h1>Login</h1>
+<h1>Register</h1>
+
 <form method="POST">
 <input type="text" name="username" placeholder="Username"> <br>
 <input type="text" name="password" placeholder="Password"> <br>
-<input type="submit" name="button" value="Login">
+<input type="submit" name="button" value="Register">
 </form>
 <hr>
 <address></address>
-
 </body> </html>
